--- a/src/style.css
+++ b/src/style.css
@@ -1,19 +1,35 @@
+body {
+  background-color: #000;
+}
 #sliderWrapper {
   width: 100%;
 }
 .slide {
   position: relative;
+  transition: opacity 2s ease-in-out;
 }
 .previousWrapper {
-  left: 25px;
+  left: 0;
+  padding-left: 30px;
 }
 .nextWrapper {
-  right: 25px;
+  right: 0;
+  padding-right: 30px;
 }
 .nextWrapper,
 .previousWrapper {
-  position: absolute;
-  top: 45%;
+  position: fixed;
+  top: 200px;
   background-color: #fff;
-  padding: 10px;
+  padding: 15px;
+}
+.next,
+.previous {
+  transition: 2s;
+  cursor: pointer;
+  margin: 0 10px;
+}
+.next:hover,
+.previous:hover {
+  text-decoration: underline;
 }
