Added a "compass", for a lack of a better word. Which keeps track of which image you are on, and shows the total number of images in the top left corner.

--- a/src/style.css
+++ b/src/style.css
@@ -33,3 +33,11 @@ body {
 .previous:hover {
   text-decoration: underline;
 }
+.compassWrapper {
+  position: fixed;
+  top: 15px;
+  left: 15px;
+  padding: 15px;
+  font-size: 18px;
+  background-color: #fff;
+}
